--- a/ros/src/tl_detector/sim_traffic_light_config.yaml
+++ b/ros/src/tl_detector/sim_traffic_light_config.yaml
@@ -11,3 +11,6 @@ stop_line_positions:
     - [161.76, 2303.82]
     - [351.84, 1574.65]
 is_site: False
+CNN:
+  model: "trained_model.pb"
+  threshold: 0.50
